--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@
 # This is required to provide enough memory for the Minecraft decompilation process.
 org.gradle.jvmargs=-Xmx3G
 org.gradle.daemon=false
-mod_version=1.0
-modid=examplemod
+mod_version=1.1
+modid=lockon
 mc_version=1.16.3
 forge_version=34.0.0
 mapping=20200723
